# AVV

./: CMakeLists.txt  vcpkg.json
.github/workflows/: build.yml
src/: audio.cpp  audio.h  decoder.cpp  decoder.h  main.cpp  player.cpp  player.h  renderer.cpp  renderer.h  seekbar.cpp  seekbar.h
